external/lmgc90_dev-fortran_lib/src/obsolete/ChiPy/simulation/wrap_model_handler.h

 /**
  * @fn int model_handler_getNb(void)
  * @brief Get the number of model_handles
  *
  * @cond PYDOC
  * usage : nb = model_handler_getNb()
  * @return nb (integer) : the number of model_handles in the database
  * @endcond
  *
  * @cond CDOC
  * @return (int) : the number of model_handles in the database
  * @endcond
  */
  extern "C" int model_handler_getNb(void);
 /**
  * @fn void model_handler_getModelType(int id, char** string_out, int* string_size)
  * @brief Get the model type of a model_handle
  *
  * @cond PYDOC
  * usage : model = model_handler_getModelType(id)
  * @param[in] id (integer) : the id of model_handle in the database
  * @return model (string)  : the model type of the model_handle
  * @endcond
  *
  * @cond CDOC
  * @param[in] id (int) : the id of the model_handle in the database
  * @param[out] string_out (char**) : pointer on string of model type
  * @param[out] string_size (int*)  : size of string pointed by string_out
  * @endcond
  */
  extern "C" void model_handler_getModelType(int id, char** string_out, int* string_size);
 /**
  * @fn void model_handler_initialize(void)
  * @brief Initialize the model_handles
  *
  * For each model, allocate and fill mapping arrays ccdof, ccfield,
  * ppsets
  *
  * @cond PYDOC
  * usage : model_handler_initialize()
  * @endcond
  */
  extern "C" void model_handler_initialize(void);
 /**
  * @fn void model_handler_changeSystemStorage(int id, char* storage)
  * @brief Change the type of storage of the system of equation associated with a model handle
  *
  * @cond PYDOC
  * usage : model_handler_changeSystemStorage(id, storage)
  * @param[in] id (integer) : the id of model_handle in the database
  * @param[in] storage (string)  : the type of storage to use
  * @endcond
  *
  * storage possible values are "std_diag", "std_band", "sym_full", "sym_band" or "sym_sky_"
  *
  * @cond CDOC
  * @param[in] id (int) : the id of the model_handle in the database
  * @param[in] storage (char*) : the type of storage to use
  * @endcond
  */
  extern "C" void model_handler_changeSystemStorage(int id, char* storage);
 /**
  * @fn void model_handler_computeElementaryMasses4All(void)
  * @brief Compute the elementary masses of every mechanical models
  *
  * @cond PYDOC
  * usage : model_handler_computeElementaryMasses4All()
  * @endcond
  */
  extern "C" void model_handler_computeElementaryMasses4All(void);
 /**
  * @fn void model_handler_computeElementaryMasses4One(int id)
  * @brief Compute the elementary masses of one mechanical model
  *
  * @cond PYDOC
  * usage : model_handler_computeElementaryMasses4One(int id)
  * @param[in] id (integer) : index of the model_handle to compute elementary masses
  * @endcond
  *
  * @cond CDOC
  * @param[in] id (int) : index of the model_handle to compute elementary masses
  * @endcond
  */
  extern "C" void model_handler_computeElementaryMasses4One(int id);
 /**
  * @fn void model_handler_computeElementaryMasses4Some(int * ivector_in, int ilength_in)
  * @brief Compute the elementary masses of a  list of model_handles
  *
  * @cond PYDOC
  * usage : model_handler_computeElementaryMasses4Some(i_list)
  * @param[in] i_list (list of integer) : list of indices of model_handles to compute elementary masses
  * @endcond
  *
  * @cond CDOC
  * @param[in] vector_in (int*) : list of indices of model_handle
  * @param[in] length (int)     : size of vector_in
  * @endcond
  */
  extern "C" void model_handler_computeElementaryMasses4Some(int * ivector_in, int ilength_in);
 /**
  * @fn void model_handler_computeElementaryCapacities4All(void)
  * @brief Compute the elementary capacities of every thermal models
  *
  * @cond PYDOC
  * usage : model_handler_computeElementaryCapacities4All()
  * @endcond
  */
  extern "C" void model_handler_computeElementaryCapacities4All(void);
 /**
  * @fn void model_handler_computeElementaryCapacities4One(int id)
  * @brief Compute the elementary capacities of one thermal model
  *
  * @cond PYDOC
  * usage : model_handler_computeElementaryCapacities4One(int id)
  * @param[in] id (integer) : index of the model_handle to compute elementary capacities
  * @endcond
  *
  * @cond CDOC
  * @param[in] id (int) : index of the model_handle to compute elementary capacities
  * @endcond
  */
  extern "C" void model_handler_computeElementaryCapacities4One(int id);
 /**
  * @fn void model_handler_computeElementaryCapacities4Some(int * ivector_in, int ilength_in)
  * @brief Compute the elementary capacities of a  list of model_handles
  *
  * @cond PYDOC
  * usage : model_handler_computeElementaryCapacities4Some(i_list)
  * @param[in] i_list (list of integer) : list of indices of model_handles to compute elementary capacities
  * @endcond
  *
  * @cond CDOC
  * @param[in] vector_in (int*) : list of indices of model_handle
  * @param[in] length (int)     : size of vector_in
  * @endcond
  */
  extern "C" void model_handler_computeElementaryCapacities4Some(int * ivector_in, int ilength_in);
 /**
  * @fn void model_handler_computeElementaryConductivities4All(void)
  * @brief Compute the elementary conductivities of every thermal models
  *
  * @cond PYDOC
  * usage : model_handler_computeElementaryConductivities4All()
  * @endcond
  */
  extern "C" void model_handler_computeElementaryConductivities4All(void);
 /**
  * @fn void model_handler_computeElementaryConductivities4One(int id)
  * @brief Compute the elementary conductivities of one thermal model
  *
  * @cond PYDOC
  * usage : model_handler_computeElementaryConductivities4One(int id)
  * @param[in] id (integer) : index of the model_handle to compute elementary conductivities
  * @endcond
  *
  * @cond CDOC
  * @param[in] id (int) : index of the model_handle to compute elementary conductivities
  * @endcond
  */
  extern "C" void model_handler_computeElementaryConductivities4One(int id);
 /**
  * @fn void model_handler_computeElementaryConductivities4Some(int * ivector_in, int ilength_in)
  * @brief Compute the elementary conductivities of a  list of model_handles
  *
  * @cond PYDOC
  * usage : model_handler_computeElementaryConductivities4Some(i_list)
  * @param[in] i_list (list of integer) : list of indices of model_handles to compute elementary conductivities
  * @endcond
  *
  * @cond CDOC
  * @param[in] vector_in (int*) : list of indices of model_handle
  * @param[in] length (int)     : size of vector_in
  * @endcond
  */
  extern "C" void model_handler_computeElementaryConductivities4Some(int * ivector_in, int ilength_in);
 /**
  * @fn void model_handler_computeElementaryBulks4All(void)
  * @brief Compute the elementary bulks of every mechanical models
  *
  * @cond PYDOC
  * usage : model_handler_computeElementaryBulks4All()
  * @endcond
  */
  extern "C" void model_handler_computeElementaryBulks4All(void);
 /**
  * @fn void model_handler_computeElementaryBulks4One(int id)
  * @brief Compute the elementary bulks of one mechanical model
  *
  * @cond PYDOC
  * usage : model_handler_computeElementaryBulks4One(int id)
  * @param[in] id (integer) : index of the model_handle to compute elementary bulks
  * @endcond
  *
  * @cond CDOC
  * @param[in] id (int) : index of the model_handle to compute elementary bulks
  * @endcond
  */
  extern "C" void model_handler_computeElementaryBulks4One(int id);
 /**
  * @fn void model_handler_computeElementaryBulks4Some(int * ivector_in, int ilength_in)
  * @brief Compute the elementary bulks of a  list of model_handles
  *
  * @cond PYDOC
  * usage : model_handler_computeElementaryBulks4Some(i_list)
  * @param[in] i_list (list of integer) : list of indices of model_handles to compute elementary bulks
  * @endcond
  *
  * @cond CDOC
  * @param[in] vector_in (int*) : list of indices of model_handle
  * @param[in] length (int)     : size of vector_in
  * @endcond
  */
  extern "C" void model_handler_computeElementaryBulks4Some(int * ivector_in, int ilength_in);
 /**
  * @fn void model_handler_computeElementaryFext4All(void)
  * @brief Compute the elementary external forces of every mechanical models
  *
  * @cond PYDOC
  * usage : model_handler_computeElementaryFext4All()
  * @endcond
  */
  extern "C" void model_handler_computeElementaryFext4All(void);
 /**
  * @fn void model_handler_computeElementaryFext4One(int id)
  * @brief Compute the elementary external forces of one mechanical model
  *
  * @cond PYDOC
  * usage : model_handler_computeElementaryFext4One(int id)
  * @param[in] id (integer) : index of the model_handle to compute elementary external forces
  * @endcond
  *
  * @cond CDOC
  * @param[in] id (int) : index of the model_handle to compute elementary external forces
  * @endcond
  */
  extern "C" void model_handler_computeElementaryFext4One(int id);
 /**
  * @fn void model_handler_computeElementaryFext4Some(int * ivector_in, int ilength_in)
  * @brief Compute the elementary external forces of a  list of model_handles
  *
  * @cond PYDOC
  * usage : model_handler_computeElementaryFext4Some(i_list)
  * @param[in] i_list (list of integer) : list of indices of model_handles to compute elementary external forces
  * @endcond
  *
  * @cond CDOC
  * @param[in] vector_in (int*) : list of indices of model_handle
  * @param[in] length (int)     : size of vector_in
  * @endcond
  */
  extern "C" void model_handler_computeElementaryFext4Some(int * ivector_in, int ilength_in);
 /**
  * @fn void model_handler_updateState4All(void)
  * @brief Update the state of every model_handles
  *
  * @cond PYDOC
  * usage : model_handler_updateState4All()
  * @endcond
  */
  extern "C" void model_handler_updateState4All(void);
 /**
  * @fn void model_handler_updateState4One(int id)
  * @brief Update the state of a model_handle
  *
  * @cond PYDOC
  * usage : model_handler_updateState4One(int id)
  * @param[in] id (integer) : index of the model_handle to update
  * @endcond
  *
  * @cond CDOC
  * @param[in] id (int) : index of the model_handle to update
  * @endcond
  */
  extern "C" void model_handler_updateState4One(int id);
 /**
  * @fn void model_handler_updateState4Some(int * ivector_in, int ilength_in)
  * @brief Update the state of a list of model_handles
  *
  * @cond PYDOC
  * usage : model_handler_updateState4Some(i_list)
  * @param[in] i_list (list of integer) : list of indices of model_handles to update
  * @endcond
  *
  * @cond CDOC
  * @param[in] vector_in (int*) : list of indices of model_handle
  * @param[in] length (int)     : size of vector_in
  * @endcond
  */
  extern "C" void model_handler_updateState4Some(int * ivector_in, int ilength_in);
 /**
  * @fn void model_handler_assemble4All()
  * @brief Assemble the systems of equations
  *
  * @cond PYDOC
  * usage : model_handler_assemble4All()
  * @endcond
  */
  extern "C" void model_handler_assemble4All(void);
 /**
  * @fn void model_handler_computeFreeState4All()
  * @brief Compute free state of all systems
  *
  * @cond PYDOC
  * usage : model_handler_computeFreeStateAll()
  * @endcond
  */
  extern "C" void model_handler_computeFreeState4All(void);
 /**
  * @fn void model_handler_computeDofs4All()
  * @brief Compute degrees of freedom
  *
  * @cond PYDOC
  * usage : model_handler_computeDofs4All()
  * @endcond
  */
  extern "C" void model_handler_computeDofs4All(void);
 /**
  * @fn void model_handler_cleanMemory()
  * @brief Free memory allocated within model_handler and modelization module
  *
  * @cond PYDOC
  * usage : model_handler_cleanMemory()
  * @endcond
  */
  extern "C" void model_handler_cleanMemory(void);