external/lmgc90_dev-fortran_lib/src/obsolete/ChiPy/simulation/wrap_model_handler.f90

!> LMGC90 python wrap of model_handler
!> \author F. Dubois
!> \date   January 2010
!>

module wrap_model_handler

  use ISO_C_BINDING

  use parameters, only : get_storage_id_from_type

  use mdl_hdl_parameters

  use model_handler, only : initialize                       , &
                            change_system_storage            , &
                            get_nb_models                    , &
                            !get_nb_mecaModels    , &
                            !get_nb_therModels    , &
                            compute_elementary_masses        , &
                            compute_elementary_capacities    , &
                            compute_elementary_conductivities, &
                            compute_elementary_bulks         , &
                            compute_elementary_fext          , &
                            assemble_elementary_rhs_4all     , &
                            assemble_elementary_lhs_4all     , &
                            compute_free_state               , &
                            compute_dofs                     , &
                            compute_residue_norm             , &
                            !compute_coor_detec   , &
                            !get_inertia          , &
                            get_type                         , &
                            get_nb_nodal_field               , &
                            get_nb_elementary_rhs_contrib    , &
                            get_connectivities               , &
                            get_coor                         , &
                            get_nodal_field                  , &
                            get_ptr_nodal_field              , &
                            set_nodal_field                  , &
                            get_rhs_contribution             , &
                            get_elementary_field             , &
                            update                           , &
                            clean_module

  IMPLICIT NONE

  public initializeModelHandles              , &
         changeSystemStorage                 , &
         getNbModelHandles                   , &
         getModelHandleType                  , &
         computeElementaryMasses4All         , &
         computeElementaryMasses4One         , &
         computeElementaryMasses4Some        , &
         computeElementaryCapacities4All     , &
         computeElementaryCapacities4One     , &
         computeElementaryCapacities4Some    , &
         computeElementaryConductivities4All , &
         computeElementaryConductivities4One , &
         computeElementaryConductivities4Some, &
         computeElementaryBulks4All          , &
         computeElementaryBulks4One          , &
         computeElementaryBulks4Some         , &
         computeElementaryFext4All           , &
         computeElementaryFext4One           , &
         computeElementaryFext4Some          , &
         computeFreeState4all                , &
         computeDofs4All                     , &
         computeResidueNorm                  , &
         !computeDetectionCoor4All, &
         !getInertia              , &
         getCoordinates                      , &
         getNodalField                       , &
         getNodalFieldPtr                    , &
         setNodalField                       , &
         getNodalFieldNames                  , &
         getRhsContribution                  , &
         getRhsContributionNames             , &
         getElementaryField                  , &
         updateState4All                     , &
         updateState4One                     , &
         updateState4Some                    , &
         cleanMemory

contains

  function getNbModelHandles() bind(c, name='model_handler_getNb')
    implicit none
    integer(c_int) :: getNbModelHandles

    getNbModelHandles = get_nb_models()
  end function

  subroutine getModelHandleType(id, string_out, string_size) bind(c, name='model_handler_getModelType')
    implicit none
    integer(c_int), intent(in), value :: id
    type(c_ptr)                       :: string_out
    integer(c_int), intent(out)       :: string_size
    !
    character(len=9)     , pointer :: model
    character(len=c_char), pointer :: gna

    allocate(model)
    model = get_model_type_from_id( get_type(id) )

    string_size = len(trim(model))
    gna         => model(1:1)
    string_out  = c_loc( gna )
    
  end subroutine

  subroutine initializeModelHandles() bind(c, name='model_handler_initialize')
    implicit none

    call initialize()

  end subroutine

  subroutine changeSystemStorage(id, storage) bind(c, name='model_handler_changeSystemStorage')
    implicit none
    integer(c_int)                 , intent(in), value :: id
    character(c_char), dimension(*), intent(in)        :: storage
    !
    character(len=8) :: string
    integer(kind=4)  :: i, i_storage

    string = ''
    i = 1
    do while( storage(i) /= C_NULL_CHAR .and. i < 9 )
      string = string(1:i-1) // storage(i)
      i = i + 1
    end do

    i_storage = get_storage_id_from_type(string)

    call change_system_storage(id, i_storage)

  end subroutine

  subroutine computeElementaryMasses4All() bind(c, name="model_handler_computeElementaryMasses4All")
    implicit none
    integer(kind=4) :: id

    !> \todo get a list of mechanical model_handles instead
    do id = 1, get_nb_models()
      call compute_elementary_masses(id)
    end do

  end subroutine

  subroutine computeElementaryMasses4One(id) bind(c, name="model_handler_computeElementaryMasses4One")
    implicit none
    integer(c_int), intent(in), value :: id

    call compute_elementary_masses(id)

  end subroutine

  subroutine computeElementaryMasses4Some(list_ids, length) bind(c, name="model_handler_computeElementaryMasses4Some")
    implicit none
    type(c_ptr),    intent(in), value :: list_ids
    integer(c_int), intent(in), value :: length
    !
    integer(kind=4) :: i
    integer(kind=4), dimension(:), pointer :: list

    call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
    do i = 1, length
      call compute_elementary_masses(list(i))
    end do

  end subroutine

  subroutine computeElementaryCapacities4All() bind(C, name="model_handler_computeElementaryCapacities4All")
    implicit none
    integer(kind=4) :: id

    do id = 1, get_nb_models()
      call compute_elementary_capacities(id)
    end do

  end subroutine

  subroutine computeElementaryCapacities4One(id) bind(C, name="model_handler_computeElementaryCapacities4One")
    implicit none
    integer(kind=c_int), intent(in), value :: id

    call compute_elementary_capacities(id)

  end subroutine

  subroutine computeElementaryCapacities4Some(list_ids, length) bind(c, name="model_handler_computeElementaryCapacities4Some")
    implicit none
    type(c_ptr),    intent(in), value :: list_ids
    integer(c_int), intent(in), value :: length
    !
    integer(kind=4) :: i
    integer(kind=4), dimension(:), pointer :: list

    call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
    do i = 1, length
      call compute_elementary_capacities(list(i))
    end do

  end subroutine

  subroutine computeElementaryConductivities4All() bind(C, name="model_handler_computeElementaryConductivities4All")
    implicit none
    integer(kind=4) :: id

    do id = 1, get_nb_models()
      call compute_elementary_conductivities(id)
    end do

  end subroutine

  subroutine computeElementaryConductivities4One(id) bind(C, name="model_handler_computeElementaryConductivities4One")
    implicit none
    integer(kind=c_int), intent(in), value :: id

    call compute_elementary_conductivities(id)

  end subroutine

  subroutine computeElementaryConductivities4Some(list_ids, length) &
             bind(c, name="model_handler_computeElementaryConductivities4Some")
    implicit none
    type(c_ptr),    intent(in), value :: list_ids
    integer(c_int), intent(in), value :: length
    !
    integer(kind=4) :: i
    integer(kind=4), dimension(:), pointer :: list

    call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
    do i = 1, length
      call compute_elementary_conductivities(list(i))
    end do

  end subroutine

  subroutine computeElementaryBulks4All() bind(c, name="model_handler_computeElementaryBulks4All")
    implicit none
    integer(kind=4) :: id

    do id = 1, get_nb_models()
      call compute_elementary_bulks(id)
    end do

  end subroutine

  subroutine computeElementaryBulks4One(id) bind(c, name="model_handler_computeElementaryBulks4One")
    implicit none
    integer(c_int), intent(in), value :: id

    call compute_elementary_bulks(id)

  end subroutine

  subroutine computeElementaryBulks4Some(list_ids, length) bind(c, name="model_handler_computeElementaryBulks4Some")
    implicit none
    type(c_ptr),    intent(in), value :: list_ids
    integer(c_int), intent(in), value :: length
    !
    integer(kind=4) :: i
    integer(kind=4), dimension(:), pointer :: list

    call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
    do i = 1, length
      call compute_elementary_bulks(list(i))
    end do

  end subroutine

  subroutine computeElementaryFext4All() bind(c, name="model_handler_computeElementaryFext4All")
    implicit none
    integer(kind=4) :: id

    do id = 1, get_nb_models()
      call compute_elementary_fext(id)
    end do

  end subroutine

  subroutine computeElementaryFext4One(id) bind(c, name="model_handler_computeElementaryFext4One")
    implicit none
    integer(c_int), intent(in), value :: id

    call compute_elementary_fext(id)

  end subroutine

  subroutine computeElementaryFext4Some(list_ids, length) bind(c, name="model_handler_computeElementaryFext4Some")
    implicit none
    type(c_ptr),    intent(in), value :: list_ids
    integer(c_int), intent(in), value :: length
    !
    integer(kind=4) :: i
    integer(kind=4), dimension(:), pointer :: list

    call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
    do i = 1, length
      call compute_elementary_fext(list(i))
    end do

  end subroutine

  subroutine cleanMemory() bind(c, name='model_handler_cleanMemory')
    implicit none

    call clean_module
  end subroutine

  subroutine updateState4All() bind(C, name="model_handler_updateState4All")
    implicit none
    integer(kind=4) :: id

    do id = 1, get_nb_models()
      call update(id)
    end do

  end subroutine

  subroutine updateState4One(id) bind(c, name="model_handler_updateState4One")
    implicit none
    integer(c_int), intent(in), value :: id

    call update(id)

  end subroutine

  subroutine updateState4Some(list_ids, length) bind(c, name="model_handler_updateState4Some")
    implicit none
    type(c_ptr),    intent(in), value :: list_ids
    integer(c_int), intent(in), value :: length
    !
    integer(kind=4) :: i
    integer(kind=4), dimension(:), pointer :: list

    call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
    do i = 1, length
      call update(list(i))
    end do

  end subroutine

  subroutine assemble4all() bind(C, name='model_handler_assemble4All')
    implicit none

    ! \todo : model_handler parameters with p_RHS_something instead of 1
    call assemble_elementary_rhs_4all(1)
    call assemble_elementary_lhs_4all()

  end subroutine

  subroutine computeFreeState4all() bind(c, name='model_handler_computeFreeState4All')
    implicit none
    integer(kind=4) :: id

    do id = 1, get_nb_models()
      call compute_free_state(id,1,1)
    end do

  end subroutine

  subroutine computeDofs4All() bind(c, name='model_handler_computeDofs4All')
    implicit none
    integer(kind=4) :: id

    do id = 1, get_nb_models()

      ! rm : change [1,2] in [2] because Vfree is now added in compute_free_state
      call compute_dofs(id,2,2,(/2/))

    end do

  end subroutine
